Upgrade of MP Rest client to 1.3.3. First refactoring steps to fix generics declarations.
Signed-off-by: Tomas Langer <tomas.langer@oracle.com>